--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Root CSS -->
-  <link rel="stylesheet" href="./css/root.css">
+  <link rel="stylesheet" href="./CSS/root.css">
 </head>
 
 <body>
