--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Root CSS -->
-  <link rel="stylesheet" href="./CSS/root.css">
+  <link rel="stylesheet" href="./css/root.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
   <section id="navbar">
     <div class="navbar navbar-content">
       <img src="./media/new-mascot36.png">
-      <a class="navbar-brand brand-typeface" href="#">(((Coincidence))) Pupper</a>  
+      <a class="navbar-brand brand-typeface" href="#">(((Coincidence))) Pupper</a>
     </div>
     <hr class="navbar-hr" />
   </section>
@@ -41,13 +41,14 @@
             your system, crash any webpages, or ever fail to dig up some hidden gems.
             <div class="flex-row" style="justify-content: left;">
               <div class="flex-column">
-              <img src="./media/firefox-logo.png" class="clicker landing-logos" style="flex: 0 0 50%" />
-              <p class="flex-child bozo-text"><span class="bozo-text-carat">^</span><br>Have Firefox? Click me.</p>
+                <img src="./media/firefox-logo.png" class="clicker landing-logos" style="flex: 0 0 50%" />
+                <p class="flex-child bozo-text"><span class="bozo-text-carat">^</span><br>Have Firefox? Click me.</p>
               </div>
-    
+
               <div class="flex-column">
-              <img src="./media/tampermonkey-logo.png" class="clicker landing-logos" style="flex: 0 0 50%" />
-                <p class="flex-child bozo-text"><span class="bozo-text-carat">^</span><br>Not on Firefox? Click me instead.</p>
+                <img src="./media/tampermonkey-logo.png" class="clicker landing-logos" style="flex: 0 0 50%" />
+                <p class="flex-child bozo-text"><span class="bozo-text-carat">^</span><br>Not on Firefox? Click me
+                  instead.</p>
               </div>
             </div>
           </div>
@@ -65,22 +66,22 @@
     </section>
 
     <section id="cringebar" class="cringebar">
-      <div class="flex-row" style="text-align: center;">
-        <div class="flex-child">
+      <div class="flex-row">
+        <div class="flex-column" style="margin-right: 5em;">
           <p class="cringebar-header"> Go Fast </p>
           <p class="cringebar-subheader">Performant code that will never bog down the browser.</p>
-          <img class="cringbar-icon" src="./media/fast.png">
+          <img class="cringebar-icon" src="./media/fast.png">
         </div>
-        <div class="flex-child">
+        <div class="flex-column" style="margin-right: 5em;">
           <p class="cringebar-header"> Unmask Gems </p>
           <p class="cringebar-subheader">From Michael Savage to <span>Michael Weiner</span>, crypto hasn't been so
             unsuccessful since <a href="https://basicattentiontoken.org/">BAT</a>.</p>
-          <img class="cringbar-icon" src="./media/diamond.png">
+          <img class="cringebar-icon" src="./media/diamond.png">
         </div>
-        <div class="flex-child">
+        <div class="flex-column">
           <p class="cringebar-header"> Hail Victory </p>
           <p class="cringebar-subheader">Hail our people, hail victory!</p>
-          <img class="cringbar-icon" src="./media/hand.png">
+          <img class="cringebar-icon" src="./media/hand.png">
         </div>
       </div>
     </section>
@@ -91,9 +92,9 @@
 
     <section id="modals">
       <!-- Templated via script modal.js -->
-        <div class="modal-core modal--hide"></div>
-        <div class="modal-core modal--hide"></div>
-        <div id="modal-blur">
+      <div class="modal-core modal--hide"></div>
+      <div class="modal-core modal--hide"></div>
+      <div id="modal-blur">
       </div>
     </section>
 
